# playwhe

./: .gitignore  CHANGELOG.md  LICENSE.txt  NOTES.md  Pipfile  README  README.md  README.rst  _README.md  _playwhe.py  playwhe.py  setup.cfg  setup.py
data/: NOTES  NOTES.md  playwhe.db  playwhe.err  results.csv
playwhe/: __init__.py  cli.py  common.py  constants.py  error.py  errors.py  use_cases.py
playwhe/cli/: __init__.py  schema.py  store.py
playwhe/client/: __init__.py  fetcher.py  parser.py
playwhe/db/: __init__.py  query.py  result.py  schema.py  tasks.py
playwhe/scraper/: __init__.py  client.py  parser.py
tests/playwhe/: test_common.py  test_use_cases.py
tests/playwhe/cli/store/: test_initialize.py  test_load.py  test_select_last_result.py  test_update.py
tests/playwhe/client/: fake.py  test_fetch.py  test_fetcher.py  test_parser.py
tests/playwhe/db/: test_query.py  test_result.py  test_tasks.py
tests/playwhe/scraper/: test_client.py  test_parser.py  test_scrape.py  util.py
tests/playwhe/scraper/fixtures/responses/: 11_Nov.html  15_Jul.html  94_Jul.html
