[metadata]
name = playwhe
version = attr: playwhe.constants.VERSION
description = A Python library and CLI for the retrieval and storage of Play Whe results.
long_description = file: README.rst
url = https://github.com/playwhesmarter/playwhe
author = Dwayne Crooks
author_email = me@dwaynecrooks.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
keywords = nlcb, playwhe

[options]
packages = playwhe, playwhe.db, playwhe.scraper
